--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>Welcome to Stock Quote Finder!</h1>
+<html>
+<head>
 
-<button href="default.php">Click Here to Begin</button>
+<meta http-equiv="refresh" content="1; url=default.php">
+</head>
+  
+<body>
+  <h1>Welcome to Stock Quote Finder!</h1>
+
+  <button href="default.php">Click Here to Begin</button>
+</body>
+</html>
