--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<meta http-equiv="refresh" content="2; url=default.php">
+
+
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="2; url=default.php">
+        <title>Stock Quote Finder</title>
+    </head>
+    <body>
+        <h1>Stock Quote Finder</h1>
+    </body>
+</html>
 
